tests/baselines/reference/exponentiationOperatorWithNew.errors.txt
tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts(6,1): error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.


==== tests/cases/conformance/es7/exponentiationOperator/exponentiationOperatorWithNew.ts (1 errors) ====
    var a: any;
    var b: any;
    var c: any;
    new a ** b ** c;
    new a ** new b ** c;
    new (a ** b ** c);
    ~~~~~~~~~~~~~~~~~
!!! error TS2351: Cannot use 'new' with an expression whose type lacks a call or construct signature.